# yammi

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  INSTALL  README  acinclude.m4  configure.in.in  cvs2git-yammi.options  cvs2git-yammi.txt  smoketest.sh  smoketest_cvs.sh  smoketest_startfirsttime.sh  yammi.kdevelop  yammi.kdevses  yammi.pro
HEAD/: .cvsignore  AUTHORS  CHANGELOG  CREDITS  INSTALL  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  subdirs  todo  yammi.kdevprj  yammi.kdevses  yammi.lsm  yammi.spec  yammiDmburn  yammiGrabAndEncode  yammiMp3Edit  yammiShutdownScript
HEAD/admin/: am_edit  mkinstalldirs
HEAD/po/: de.po
HEAD/yammi/: .cvsignore  ApplyToAllBase.ui  CMP3Info.h  ConsistencyCheckDialog.cpp  ConsistencyCheckDialogBase.ui  ConsistencyCheckParameter.h  DeleteDialog.ui  Makefile.am  Makefile.in  PreferencesDialogBase.ui  SongInfoDialog.ui  UpdateDatabaseDialogBase.ui  UpdateDatabaseMediaDialogBase.ui  WorkDialogBase.ui  artsplayer.cpp  artsplayer.h  defaultDoubleClick.xpm  defaultMiddleClick.xpm  dummyplayer.h  folder.cpp  folder.h  foldercategories.cpp  foldercategories.h  foldergroups.cpp  foldergroups.h  foldermedia.cpp  foldermedia.h  foldersorted.cpp  foldersorted.h  fuzzsrch.cpp  fuzzsrch.h  lineeditshift.cpp  lineeditshift.h  main.cpp  mediaplayer.cpp  mediaplayer.h  mp3tag.h  mydatetime.cpp  mylist.cpp  mylist.h  (+42 more)
HEAD/yammi/docs/: Makefile.in
HEAD/yammi/docs/en/: Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
HEAD/yammi/icons/: Makefile.am  Makefile.in  dequeueAll.xpm  dequeueSong.xpm  enqueue.xpm  enqueueasnext.xpm  newCategory.xpm  pause.xpm  playnow.xpm  prelisten.xpm  prelistenEnd.xpm  prelistenMiddle.xpm  prelistenStart.xpm  songinfo.xpm  stopPrelisten.xpm  toFromPlaylist.xpm
HEAD/yammi/mp3info/: CFrameHeader.cpp  CFrameHeader.h  CMP3Info.cpp  CMP3Info.h  CVBitRate.cpp  CVBitRate.h  Makefile.am  Makefile.in
contrib/: asoundrc-custom-dmix.txt
cvsroot/: AUTHORS  CHANGELOG  Makefile.am  Makefile.in  README  TODO  configure  configure.in  grabAndEncode  xmmsctrl.h  yammi.kdevprj  yammi.kdevses  yammi.spec
cvsroot/yammi/: DeleteDialog.ui  Makefile.am  Makefile.in  PreferencesDialogBase.ui  SongInfoDialog.ui  YammiGuiBase.ui  clearPlaylist.xpm  defaultDoubleClick.xpm  defaultMiddleClick.xpm  dequeueSong.xpm  folder.cpp  folder.h  folderactual.cpp  folderactual.h  folderall.cpp  folderall.h  foldercategories.cpp  foldercategories.h  foldergroups.cpp  foldergroups.h  folderhistory.h  foldermedia.cpp  foldermedia.h  folderunclassified.h  main.cpp  mp3tag.cpp  mp3tag.h  mydatetime.cpp  mylist.cpp  mylist.h  mylistview.cpp  mylistview.h  playnow.xpm  preferencesdialog.cpp  preferencesdialog.h  prefs.cpp  prefs.h  prelisten.xpm  song.cpp  song.h  (+8 more)
cvsroot/yammi/docs/: Makefile  Makefile.in
cvsroot/yammi/docs/en/: Makefile  Makefile.in  index.sgml
debian/: README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex  yammi.cron.d.ex  yammi.default.ex  (+1 more)
kyammi/: AUTHORS  CREDITS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  MyYammiHowto.txt  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.files  configure.in  configure.in.in  smoketest_cvs.sh  smoketest_startfirsttime.sh  yammi.kdevelop  yammi.kdevelop.pcs  yammi.kdevses  yammi.lsm  yammiGrabAndEncode
kyammi/admin/: am_edit
kyammi/debian/: changelog  control  copyright  docs  rules
kyammi/debug/src/icons/: Makefile
kyammi/doc/: Makefile.am  Makefile.in
kyammi/doc/en/: Makefile.am  Makefile.in  index.docbook
kyammi/po/: Makefile.in  de.gmo  de.po  es.gmo  es.po  it.gmo  it.po  yammi.pot
kyammi/src/: ApplyToAllBase.ui  CMP3Info.cpp  ConsistencyCheckDialog.cpp  ConsistencyCheckDialog.h  ConsistencyCheckDialogBase.ui  ConsistencyCheckParameter.cpp  ConsistencyCheckParameter.h  DeleteDialog.ui  Makefile.am  Makefile.in  PreferencesDialogBase.ui  SongInfoDialog.ui  UpdateDatabaseDialogBase.ui  UpdateDatabaseMediaDialogBase.ui  artsplayer.cpp  artsplayer.h  dummyplayer.h  folder.cpp  folder.h  foldercategories.cpp  foldergroups.cpp  gstplayer.cpp  gstplayer.h  main.cpp  mediaplayer.cpp  mediaplayer.h  mp3tag.h  mylist.cpp  mylist.h  mylistview.cpp  mylistview.h  noatunplayer.cpp  noatunplayer.h  options.h  preferencesdialog.cpp  preferencesdialog.h  prefs.cpp  prefs.h  searchthread.cpp  searchthread.h  (+28 more)
kyammi/src/icons/: Makefile  Makefile.am  Makefile.in  dequeueSong.xpm  enqueueasnext.xpm  newCategory.xpm  pause.xpm  play.xpm  playnow.xpm  prelistenEnd.xpm  prelistenMiddle.xpm  skipbackward.xpm  skipforward.xpm  stop.xpm  stopPrelisten.xpm  toFromPlaylist.xpm  yammiicon.xpm
kyammi/templates/: h
mycvsroot/playlistmanager/: Makefile.am  clearPlaylist.xpm  deletedialog.cpp  filesave.xpm  folder.cpp  folderactual.cpp  folderall.cpp  foldergroups.cpp  folderhistory.cpp  folderplaylists.h  fuzzsrch.h  main.cpp  mini-playlistmanager.xpm  mydatetime.cpp  mydatetime.h  mylist.cpp  mylist.h  pause.xpm  playlistmanager.xpm  preferencesdialogbase.cpp  preferencesdialogbase.h  prefs.cpp  skipforward.xpm  songinfo.h  songinfodialog.cpp  songinfodialog.h  yammimodel.h
mycvsroot/playlistmanager/.deps/: folder.P  folder.moc.P  folderall.moc.P  foldergroups.moc.P  folderplaylists.P  folderunclassified.moc.P  listviews.moc.P  main.P  mp3_layer.P  mp3tag.P  mylist.P  preferencesdialog.moc.P  preferencesdialogbase.P  preferencesdialogbase.moc.P  song.P  songinfo.P  songinfo.moc.P  songinfodialog.moc.P  yammigui.P  yammimodel.P  yammmodel.moc.P
mycvsroot/playlistmanager/.xvpics/: filenew.xpm  filesave.xpm  mini-playlistmanager.xpm  playlistmanager.xpm  skipbackward.xpm
mycvsroot/playlistmanager/docs/en/: .directory  index-2.html  index-3.html  index-4.html  index-6.html  index.html
qt3/yammi/docs/en/: Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index.html
(+473 files in other folders)
